# ib-3ndfl

./: .gitignore  README.md  pyproject.toml
investments/data_providers/: cbr.py
investments/ibtax/: ibtax.py  report_presenter.py
investments/report_parsers/: ib.py
