[project]
authors = [
    {name = "Maxim Andreev", email = "andreevmaxim@gmail.com"},
]
license = {text = "MIT"}
requires-python = "<4.0,>=3.10"
dependencies = [
    "pandas<3.0,>=2.2",
    "requests<3.0,>=2.31",
    "tabulate<1.0,>=0.9",
    "aiomoex<3.0,>=2.1",
    "WeasyPrint<61.0,>=60.2",
    "jinja2<4.0,>=3.1",
]
name = "investments"
version = "0.2.0"
description = "Analysis of Interactive Brokers reports for tax reporting in Russia"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Office/Business :: Financial :: Investment",
]

[project.urls]
repository = "https://github.com/cdump/investments"

[project.scripts]
ibtax = "investments.ibtax.ibtax:main"
ibdds = "investments.ibdds.ibdds:main"

[dependency-groups]
dev = [
    "pytest<9.0,>=8.0",
    "mypy<2.0,>=1.8",
    "ruff<1.0.0,>=0.1.14",
    "types-tabulate<1.0,>=0.9",
    "types-requests<3.0,>=2.31",
]
